# learn

./: .gitignore  README.md  config.py.example  main.py  pyproject.toml
chatbot_book/: chat_bot.py  search_tool.py
docs/: chabot.py  interrupt.py  tools.py
langGraph_demo/: demo01.ipynb  demo01.py  demo02.ipynb  demo02.py  demo03.ipynb  demo1.py  openai_call.py  test.py
langGraph_docs/: chatbot.ipynb  dynamic.py  intervention.py  langfuse_example.py  langfuse_weather.py  memory.py  readme.md  static_.py  structure_output.py  weather_eg.py
llm/: base_chat.py
workflow/: chatbot.py  duckduck_test.py  search_tool.ipynb
